output
  File "/home/tatsuya/.resc/rescs/resc3587de377598d448285e28ec694d91ec.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d7e100>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc05e14f5741f753940dae19996736503a.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4322dc0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc31293f2f263cd68faa40cdf63da3e3b3.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d81d30>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescd67d0fbdfb717a580e68e58b6028efa5.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e5a1f3a0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescd1914d2879938658be770dd39dc61b85.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4d29d60>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescbcad23b8d46304f4d5343d71b49b845c.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4d3dca0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc684093856e0526d68e3a2762c10e0172.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7dc5af0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc572ca137d0eceb345233e8e2667eaf97.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4d1c790>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc05bf7b1ba09825a4ae7d9284c71c6b36.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e431b670>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc852c9748a73d593c78cd4c04cd9ef270.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d69e50>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc3587de377598d448285e28ec694d91ec.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d7e100>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc4827afe291a18bdb0da5ffe75d8dba63.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e43249d0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resca932c9208aa6bfbb1a0d01bac1075208.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e42ca310>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescda4064ce9a199ff4f40477043ae559d3.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7dc53d0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resce631245d73fc7717d6cfc3df8106eeaa.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4d1c9d0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescc8f75fa8cc857441470cc973f72d173a.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d7bc10>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescd4503d40bcca56076f15d3a53b8b74cb.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4c89130>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc7fab480835072019214a0a781771375e.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4c8c910>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resce92139be4650a1ffcaf2dc93d25099e2.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d69550>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc952cd5d4cc748c3a98c5212cfb9b8642.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4cd8160>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc33dfe47ded2be7555c206b8c35287a0d.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c63e9880>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resca074fe38918f35019013d00702eaf4a8.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4cdbaf0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resce631245d73fc7717d6cfc3df8106eeaa.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4d1c9d0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescf3002e70a8f79d25b8366914cf2370fb.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d63c10>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc7fab480835072019214a0a781771375e.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4c8c910>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescd67d0fbdfb717a580e68e58b6028efa5.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e5a1f3a0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resccf16d97610f39f910beb3706fff7ca38.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7dee0a0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescd4503d40bcca56076f15d3a53b8b74cb.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4c89130>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc3587de377598d448285e28ec694d91ec.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d7e100>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc852c9748a73d593c78cd4c04cd9ef270.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d69e50>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resca074fe38918f35019013d00702eaf4a8.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4cdbaf0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc572ca137d0eceb345233e8e2667eaf97.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4d1c790>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescd1914d2879938658be770dd39dc61b85.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4d29d60>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescfeb86b8994613517774f77115b28b32c.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c4370be0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc31293f2f263cd68faa40cdf63da3e3b3.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d81d30>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc4827afe291a18bdb0da5ffe75d8dba63.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e43249d0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc684093856e0526d68e3a2762c10e0172.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7dc5af0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc952cd5d4cc748c3a98c5212cfb9b8642.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4cd8160>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc05bf7b1ba09825a4ae7d9284c71c6b36.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e431b670>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc33dfe47ded2be7555c206b8c35287a0d.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c63e9880>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resce92139be4650a1ffcaf2dc93d25099e2.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d69550>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc05e14f5741f753940dae19996736503a.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4322dc0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resca932c9208aa6bfbb1a0d01bac1075208.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e42ca310>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc2bfe62ebfc30589bba7db6b6c9d5bbf1.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c4366400>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescc8f75fa8cc857441470cc973f72d173a.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7d7bc10>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescda4064ce9a199ff4f40477043ae559d3.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c7dc53d0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/rescbcad23b8d46304f4d5343d71b49b845c.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7fd5e4d3dca0>
                ^
SyntaxError: invalid syntax
  File "/home/tatsuya/.resc/rescs/resc92e0ef957cdd5a7b89c68a7ddf2838b7.py", line 98
    resclog.ssh=<resc.ssh.SSH object at 0x7f25c434b4f0>
                ^
SyntaxError: invalid syntax
